feat: increase status-bar left width to 32

--- a/src/nord-status-content-no-patched-font.conf
+++ b/src/nord-status-content-no-patched-font.conf
@@ -13,6 +13,7 @@ set -g @prefix_highlight_copy_mode_attr "fg=black,bg=brightcyan"
 #+ Status +
 #+--------+
 #+--- Bars ---+
+set -g status-left-length 32
 set -g status-left "#[fg=black,bg=blue,bold] #S "
 set -g status-right "#{prefix_highlight} #[fg=white,bg=brightblack] ${NORD_TMUX_STATUS_DATE_FORMAT} #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] ${NORD_TMUX_STATUS_TIME_FORMAT} #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]"
 
