--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@
 # + Node.js +
 # +---------+
 node_modules/
+
+# vim
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
